fix: Simplify Dockerfile to use node:18 instead of alpine to avoid npm install compilation issues

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,13 @@
-# Dockerfile Railway - Version corrigée pour commit 337e5cf
-FROM node:18-alpine
+# Dockerfile Railway - Version qui marche à coup sûr
+FROM node:18
 
-# Installer les dépendances système
-RUN apk add --no-cache python3 make g++
-
+# Utiliser node standard (pas alpine) pour éviter les problèmes de compilation
 WORKDIR /app
 
 # Copier package.json
 COPY package*.json ./
 
-# Installer toutes les dépendances
+# Installer toutes les dépendances (dev + prod pour le build)
 RUN npm install
 
 # Copier tout le code
@@ -18,14 +16,8 @@ COPY . .
 # Générer Prisma
 RUN npx prisma generate
 
-# Build avec debug
-RUN npm run build && echo "✅ Build réussi" || echo "❌ Build échoué"
-
-# Vérifier le contenu
-RUN ls -la dist/ || echo "Pas de dossier dist"
-
-# Trouver le fichier main
-RUN find . -name "main.js" -type f || echo "Aucun main.js trouvé"
+# Build l'application
+RUN npm run build
 
 # Variables d'environnement
 ENV NODE_ENV=production
@@ -37,5 +29,5 @@ RUN mkdir -p public/images
 # Exposer le port
 EXPOSE 3000
 
-# Commande de démarrage avec fallback
-CMD ["sh", "-c", "if [ -f dist/main.js ]; then node dist/main.js; elif [ -f dist/src/main.js ]; then node dist/src/main.js; else echo 'Fichier main.js introuvable' && exit 1; fi"]
+# Commande simple
+CMD ["node", "dist/main.js"]
