--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 # Copier package.json
 COPY package*.json ./
 
+COPY prisma ./prisma
+
 # Installer toutes les dépendances (dev + prod pour le build)
 RUN npm install
 
