--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
       retries: 5
 
   backend:
-    image: ranimmn/ranouma:backend-final-fixed-19-06-2025
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: admin_backend
     restart: unless-stopped
     ports:
@@ -56,14 +58,16 @@ services:
 
   # Frontend Admin
   frontend:
-    image: ranimmn/ranouma:front18-06-2025
+    build:
+      context: ./frontend-admin
+      dockerfile: Dockerfile
     container_name: admin_frontend
     restart: unless-stopped
     ports:
       - '3001:3001'
     environment:
       NODE_ENV: production
-      NEXT_PUBLIC_API_URL: http://localhost:3000
+      NEXT_PUBLIC_API_URL: http://backend:3000
     networks:
       - my-network
     depends_on:
