--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,12 +1,31 @@
-backend:
-  build:
-    context: ./backend
-    args:
-      DATABASE_URL: postgresql://postgres:0000@postgres:5432/ranimdb
-  container_name: nest_backend
-  ports:
-    - "3000:3000"
-  environment:
-    - DATABASE_URL=postgresql://postgres:0000@postgres:5432/ranimdb
-  depends_on:
-    - postgres
+version: '3.8'
+
+services:
+  postgres:
+    image: postgres:15
+    container_name: postgres_db
+    restart: always
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 0000
+      POSTGRES_DB: ranimdb
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  backend:
+    build:
+      context: ./backend
+      args:
+        DATABASE_URL: postgresql://postgres:0000@postgres:5432/ranimdb
+    container_name: nest_backend
+    ports:
+      - '3000:3000'
+    environment:
+      - DATABASE_URL=postgresql://postgres:0000@postgres:5432/ranimdb
+    depends_on:
+      - postgres
+
+volumes:
+  postgres_data:
