--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^1.41.3",
     "dayjs": "^1.11.13",
     "libphonenumber-js": "^1.12.6",
     "multer": "^1.4.5-lts.2",
